--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^4.0.0",
-    "@tailwindcss/postcss": "^4.0.0",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.35",
     "autoprefixer": "^10.4.0",
     "@vercel/analytics": "latest",
     "lucide-react": "^0.400.0",
